<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/list_menu_group">
		<item
				android:id="@+id/delete_all_item"
				android:title="@string/delete_all"
				android:checkable="false"
				android:enabled="true"
				android:visible="true"
				android:icon="@drawable/ic_menu_delete"
				/>
		<item
				android:id="@+id/select_many_item"
				android:checkable="false"
				android:enabled="true"
				android:title="@string/select_many"
				android:visible="true"
				android:icon="@drawable/ic_menu_mark"
				/>
		 <item
				android:id="@+id/settings_item"
				android:title="@string/settings"
				android:checkable="false"
				android:enabled="true"
				android:visible="true"
				android:icon="@drawable/ic_menu_preferences"/>
	</group>
</menu>
