<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="match_parent"
	  android:layout_height="match_parent"
	  android:background="@drawable/list_background">

	<Gallery
		android:id="@+id/message_gallery"
		android:layout_width="fill_parent"
		android:layout_height="300dp"
	/>

	<RelativeLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="match_parent"
	  android:layout_height="220dp"
	  android:layout_alignParentBottom="true"
	  android:padding="3dp"
	  android:background="@drawable/buttons_bg_port">
		<Button android:id="@+id/replyButton"
				android:layout_alignParentBottom="true"
				android:layout_height="60dp"
				android:layout_width="fill_parent"
				android:layout_marginBottom="130dp"
				android:text="@string/reply"
				android:onClick="replyClick">
		</Button>
		<Button android:id="@+id/notSpamButton"
				android:layout_alignParentBottom="true"
				android:layout_height="60dp"
				android:layout_width="fill_parent"
				android:layout_marginBottom="65dp"
				android:text="@string/not_spam"
				android:onClick="notSpamClick">
		</Button>
		<Button android:id="@+id/deleteButton"
				android:layout_alignParentBottom="true"
				android:layout_height="60dp"
				android:layout_width="fill_parent"
				android:text="@string/delete"
				android:onClick="deleteClick">
		</Button>
	</RelativeLayout>
</RelativeLayout>
